--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,10 +1,10 @@
 # Meta Data for SEO
 
 ## Homepage
-title = "Doks"
+title = "Insights"
 titleSeparator = "-"
-titleAddition = "Modern Documentation Theme"
-description = "Doks is a Hugo theme for building secure, fast, and SEO-ready documentation websites, which you can easily update and customize."
+titleAddition = "Analyst Documentation"
+description = "Glennis Insights Analyst Documentation"
 
 ## Documentation
 # docsVersion = "0.3"
