--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -5,10 +5,10 @@
 # url = "/docs/1.0/prologue/introduction/"
   weight = 10
 
-[[main]]
-  name = "About this project"
-  url = "/blog/"
-  weight = 20
+#[[main]]
+ # name = "About this project"
+  #url = "/blog/"
+  # weight = 20
 
 
 [[social]]
