hopeful permalink fix

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -61,8 +61,8 @@ rel  = "sitemap"
   category = "categories"
   tag = "tags"
 
-[permalinks]
-  blog = "/blog/:title/"
+#[permalinks]
+ # blog = "/blog/:title/"
 # docs = "/docs/1.0/:sections[1:]/:title/"
 
 [minify.tdewolff.html]
